 - Fix bug: don't show multiple balloons for a single problem solved.
 - Make all judging output binary in SQL to display non-UTF8 correctly.
 - Include a number of documentation improvements.
 - Fix: scoreboard filter disappeared with single affiliation selected.
 - Fix checktestdata debug print formatting.
 - Fix bug in using va_copy macro with g++ on AMD 64bit.

Version 3.2.2 - 25 January 2012
-------------------------------
 - Rename SQL upgrade snippets and add README file for these.
 - Fix JS collapse in public interface and simplify menu inclusion.
 - Fix warning of runguard trying to reset resource limits to infinity.
 - Use http port number to correctly test for network connectivity.
 - Reopen daemon stdio to /dev/null, fixes spurious errors of child
   processes failing to write to stdout.
 - Fix: sending a clarification requires an active contest.
 - Fix valid HTML URL encoding issue.
 - Misc. minor spelling and documentation fixes.
 - Fix bug in LDAP authentication. Thanks Jorge Romo.
 - Switch from Subversion to Git VCS.
 - Extend sample contest end date to make it active again.

Version 3.2.1 - 9 November 2011
-------------------------------
 - Update M4 macros from upstream. Note that this fixes problems
   only occurring in development/maintainer context.
 - Fix configure script to allow subdir customization in FHS mode.
 - Don't stop on errors when uninstalling database.
 - Update documentation.

Version 3.2.0 - 11 October 2011
-------------------------------
 - Fix displaying scorerow on teampage also for invisible teams.
 - Examples suggest secure LDAPS protocol instead of LDAP.
 - Fix bug with language extension in uploading problem zipfiles.
 - Warn to recalculate scoreboard cache after contesttime changes.
 - Add icon for scoreboard filter.
 - Use POSIX compliant cp option -P instead of -d in judgedaemon.
 - Remove teampicture from jury teampage.
 - Only display scoreboard filter options if there's something to
   choose.